# MLDocking_Dragon

./: LICENSE  README.md  environment.yml  requirements.txt  run.sh  setup
DataPrep/: Makefile  README.md  setup.cfg
DataPrep/DockingScripts/: README.md  get_energies.sh  get_frames_for_pdbqt.tcl  get_pdb_from_dlg  make_confs  make_ligand_pdbqt  make_receptor_pdbqt  merging.poses.tcl  mkdir.sh  run_docking.sh  set.element.tcl  vmdload.tcl
DataPrep/data/: 8gcy_receptor.oedu  NSUN1-AF-P46087-F1-MODEL_V2_A__DU__apo_ALA_A-371.oedu
DataPrep/examples/: analysis.ipynb  lambda_prod.yaml  polaris_prod.yaml  polaris_test.yaml
DataPrep/pipt/: __init__.py  autodock_vina_tools.py  cli.py  openeye_dock_tools.py  parsl.py  parsl_edited.py  sampling.py  smi_to_pdb.py  utils.py  workflow.py
DataPrep/pipt/tcl_utils/: set_element.tcl
DataPrep/requirements/: dev.txt  requirements.txt
DataPrep/tests/data/output/: metrics.csv
DataPrep/tests/testsampling/: sample.py
DockingScripts/: docking_openeye.py  docking_utils.py  utils.py
Dragon/: .gitignore  .training.log.swp  README.md  batch_job_driver.sh  dragon_driver.py  dragon_driver_async.py  dragon_driver_infonly.py  dragon_driver_load_inf_sort.py  dragon_driver_loadonly.py  dragon_driver_model_save_test.py  dragon_driver_sequential.py  dragon_driver_sequential_simple.py  dragon_driver_sort_test.py  dragon_driver_training_test.py  driver_functions.py  env_polaris.sh  install_aurora.sh  install_polaris.sh  key_decode.py  plot_history.py  run_driver.sh  run_driver_seq.sh  run_driver_seq_iter.sh  run_driver_training_test.sh  tmp  (+7 more)
(+57 files in other folders)
